   surround WITHOUT-INTERRUPTS.

 - Symbol SI:*INTERRUPT-DISABLE* changes name to SI:*INTERRUPTS-DISABLED*.

 - New function MP:PROCESS-JOIN, waits for a thread to terminate (J.C.Beaudoin)
   For this to work, threads are always created in a joinable state, and they
   only detach themselves when exiting and no process is waiting.

 - EXT:QUIT now has a different definition
	(ext:quit &optional (exit-code 0) (kill-all-threads nil))
   The first difference is that QUIT will execute all unwind-protect forms
   that surrounds the form that caused the exit. The second one is that we
   can explicitely kill all threads and wait for them to exit before exiting.

 - Two new functions MP:PROCESS-SUSPEND and MP:PROCESS-RESUME allow suspending
   and resuming a thread.

* Bugs fixed:

 - WITH-LOCK might run into a race condition when the lock acquisition process
   was interrupted.

 - The following functions are now interrupt safe: MP:MAKE-LOCK.

 - The use of GIVEUP-LOCK in WITH-LOCK is now protected against interrupts.

 - Forms in toplevel EVAL-WHEN or PROGN statements did not have a proper value
   of bytecodes.definition, causing the debugger to enter an infinite chain
   of errors

 - In Solaris 8 ECL failed because it did not find inttypes.h

 - When signbit() is not available, ECL now looks for existence of copysign.

* Signals and environment:

 - The toplevel now allows handling multiple processes in the same console.
   Two new commands, :w and :s, allow reading the list of processes waiting for
   grabbing the console and switching to that given process.

 - ECL now has a signal handling thread running in the background. When
   Ctrl-C or Ctrl-Break is pressed or the process gets a SIGINT signal, then
   a separate thread is spawned for handling that event. This thread typically
   enters the debugger, allowing either to continue or to interrupt specific
   processes.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***